QA playbook: cache trap, prod axe, preview-API drift